<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_activity_swiping">SwipingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="image_error">failed to load image</string>
    <string name="create">Create</string>
    <string name="have_a_room">Have a room?</string>
    <string name="get_started">Get Started</string>
    <string name="enter_the_4_digit_code_obtained_from_the_room_owner">Enter the 6-digit code obtained<br></br>from the room owner.</string>
    <string name="new_room">New Room</string>
    <string name="create_a_room_for_a_set_amount_of_people_and_become_the_room_owner">Create a room for a set amount of people and become the room owner.</string>
    <string name="enter_your_4_digit_pin_here">Enter Your 6-Digit Code Here</string>
    <string name="num_of_ppl">Number of People</string>
    <string name="participants">participants</string>
    <string name="preferences">Preferences</string>
    <string name="filter_by_genre">Filter by genre</string>
    <string name="in_room">In a room</string>
    <string name="success_join">You have successfully <br></br>joined!</string>
    <string name="please_wait">Please wait until the room owner begins.</string>
    <string name="your_room">Your room</string>
    <string name="genres_num">Genres</string>
    <string name="in_room_num">In room</string>
    <string name="ppl_set_num">People set</string>
    <string name="code">Code:</string>
    <string name="must_wait">Must wait for all participants to be inside <br></br>the room to start.</string>
    <string name="start">Start</string>
    <string name="num_input_error">Make sure that the input is a number.</string>
    <string name="found_winner">We found a <br></br>Winner!</string>
</resources>