<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".WaitingActivity">

    <ImageView
        android:id="@+id/bgVector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="26dp"
        android:contentDescription="@string/image_error"
        android:scaleX="1.15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vectorcreator4" />

    <ImageView
        android:id="@+id/backgroundRectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/image_error"
        android:scaleX="1.15"
        android:scaleY="1.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/poppins_regular"
        android:text="@string/in_room"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgVector"
        app:layout_constraintEnd_toEndOf="@+id/bgVector"

        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/bgVector"
        app:layout_constraintTop_toTopOf="@+id/bgVector"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow_back"
        android:scaleX="0.6"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="@+id/bgVector"
        app:layout_constraintEnd_toEndOf="@+id/bgVector"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:contentDescription="@string/image_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.24000001"
        app:srcCompat="@drawable/vectorcreator7" />

    <TextView
        android:id="@+id/successJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/success_join"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
        app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
    android:id="@+id/textView4"
    android:layout_width="300dp"
    android:layout_height="20dp"
    android:fontFamily="@font/poppins_regular"
    android:text="@string/please_wait"
    android:textColor="@color/textColor"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/backgroundRectangle"
    app:layout_constraintHorizontal_bias="0.61"
    app:layout_constraintStart_toStartOf="@+id/backgroundRectangle"
    app:layout_constraintTop_toTopOf="@+id/backgroundRectangle"
    app:layout_constraintVertical_bias="0.69" />

</androidx.constraintlayout.widget.ConstraintLayout>